# model-validation

./: .env.example  .gitignore  .gitmodules  README.md  codex.config.example.toml  pyproject.toml
cecl_demo/: README.md
cecl_demo/specs/: full_review.json  gap_assessment.json
demo_cases/: README.md
demo_cases/documentation_readiness/: descriptor.json
demo_cases/material_change_full/: descriptor.json
demo_cases/runtime_behavioral/: descriptor.json
scripts/: build_cecl_demo.py  generate_demo_cases.py  generate_seed_banks.py
scripts/codex/: package-lock.json  package.json  tsconfig.json
scripts/codex/src/: discover.ts  execute.ts  preflight.ts  report.ts  resolve.ts  run-case.ts
seed_banks/: README.md  manifest.json
seed_banks/atlas_community_bank/installment_refresh_2025_q1/: seed.json  seed_spec.json
seed_banks/cedar_retail_bank/installment_threshold_recalibration/: seed.json  seed_spec.json
skills/black-box-review/: SKILL.md
skills/cecl-discovery/: SKILL.md
skills/cecl-final-report/: SKILL.md
skills/cecl-gap-assessment/: SKILL.md
skills/cecl-quantitative-review/: SKILL.md
skills/conceptual-review/: SKILL.md
skills/discovery-case-shaping/: SKILL.md
skills/final-report/: SKILL.md
skills/full-revalidation/: SKILL.md
skills/playbook-resolution/: SKILL.md
src/model_validation/: __init__.py  case_ops.py  client.py  codex_bridge.py  demo_artifacts.py  demo_cli.py  discovery.py  evidence.py  execution.py  models.py  playbook.py  reporting.py  schemas.py  seed_artifacts.py  seed_authoring.py  seed_cli.py  service.py  settings.py  sidecar.py  skills.py  storage.py  tools.py
website/: .gitignore  .vercelignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
website/app/: globals.css  layout.tsx  page.tsx
(+225 files in other folders)
