[project]
name = "model-validation"
version = "0.1.0"
description = "Codex-first model validation workbench with gateway sidecars"
authors = [
    { name = "Saul Richardson" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "numpy (>=1.24.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pypdf (>=5.9.0,<6.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "model_validation", from = "src" }]

[project.scripts]
workbench-bridge = "model_validation.codex_bridge:main"
workbench-seed = "model_validation.seed_cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["A", "B", "C", "E", "F", "I", "N", "UP", "W"]
lint.ignore = ["E203", "B008", "E501", "C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "pypdf",
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
]
